added new test for SkyLevels.Altitude.getFLText

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-  "java.configuration.updateBuildConfiguration": "interactive"
+  "java.configuration.updateBuildConfiguration": "interactive",
+  "editor.fontFamily": "'White Rabbit', Consolas, 'Courier New', monospace"
 }
